[gd_scene load_steps=15 format=2]

[ext_resource path="res://assets/TowerTankMob.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Mob.gd" type="Script" id=2]
[ext_resource path="res://assets/smoke_particle.png" type="Texture" id=3]
[ext_resource path="res://particles.tres" type="Material" id=4]
[ext_resource path="res://assets/MainTankMob.png" type="Texture" id=5]
[ext_resource path="res://particlesTrooba.tres" type="Material" id=6]
[ext_resource path="res://assets/Wheel2.png" type="Texture" id=7]
[ext_resource path="res://assets/Wheel1.png" type="Texture" id=8]
[ext_resource path="res://assets/fire_particle.png" type="Texture" id=9]
[ext_resource path="res://Sounds/Suppressed-Bushmaster-ACR-5.56-Close-Gunshot-E-www.fesliyanstudios.com.mp3" type="AudioStream" id=10]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.728507 )
colors = PoolColorArray( 1, 0, 0, 1, 1, 0.537255, 0, 1 )

[sub_resource type="GradientTexture" id=2]
gradient = SubResource( 1 )

[sub_resource type="ParticlesMaterial" id=3]
flag_disable_z = true
gravity = Vector3( 0, 98, 0 )
angular_velocity = 720.0
orbit_velocity = -0.01
orbit_velocity_random = 0.27
color_ramp = SubResource( 2 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 7 ) ],
"loop": true,
"name": "New Anim",
"speed": 8.0
} ]

[node name="Mob" type="KinematicBody2D"]
scale = Vector2( 1.5, 1.5 )
script = ExtResource( 2 )

[node name="MainTank" type="Sprite" parent="."]
rotation = 1.5708
scale = Vector2( 0.15, 0.2 )
texture = ExtResource( 5 )

[node name="Tank area" type="Area2D" parent="."]

[node name="CollisionArea" type="CollisionPolygon2D" parent="Tank area"]
polygon = PoolVector2Array( -43.0652, -42.5335, 51.9699, -42.5335, 54.2148, -36.1729, 60.0142, -33.3667, 61.5108, -28.5027, 60.7625, -21.955, 56.4597, -18.5877, 52.157, -18.7747, 51.2216, -14.2849, 48.4154, -11.4787, 45.7963, -11.2917, 45.7963, -5.86642, 45.7963, 10.5964, 50.2862, 11.7188, 52.157, 15.0862, 51.9699, 18.6407, 59.0788, 19.2019, 61.3237, 23.5047, 61.1367, 30.9878, 58.3305, 34.1681, 56.0856, 35.6647, 54.776, 41.0899, 50.8474, 42.5865, -44.5618, 42.0253, -46.9938, 36.7871, -46.2455, 34.7293, -49.4258, 26.8721, -47.7421, 20.1373, -41.1945, 17.8924, -41.1945, 11.7188, -53.3545, 11.3447, -53.3545, 9.09974, -61.3988, 8.72559, -61.3988, 4.23574, -53.1674, 4.23574, -53.3545, 0.868352, -41.1945, 1.05543, -40.6332, -18.0264, -47.9292, -20.0843, -49.0517, -25.1353, -49.4258, -30.1864, -46.8068, -34.8633, -46.6197, -38.6049 )

[node name="TowerTank" type="Node2D" parent="."]

[node name="FireSpawn" type="Position2D" parent="TowerTank"]
position = Vector2( 77, 0 )

[node name="Tower" type="Sprite" parent="TowerTank"]
position = Vector2( 25.9233, 0 )
rotation = 1.5708
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 1 )

[node name="Shoot" type="Particles2D" parent="TowerTank"]
position = Vector2( 68.978, 0 )
rotation = 1.5708
scale = Vector2( 0.15, 0.15 )
emitting = false
amount = 3
lifetime = 0.2
one_shot = true
process_material = SubResource( 3 )
texture = ExtResource( 9 )

[node name="WheelAnimation" type="Node2D" parent="."]

[node name="BR" type="AnimatedSprite" parent="WheelAnimation"]
position = Vector2( -25, 31 )
rotation = 1.5708
scale = Vector2( 0.15, 0.14 )
z_index = -1
frames = SubResource( 4 )
animation = "New Anim"
frame = 1
playing = true

[node name="FL" type="AnimatedSprite" parent="WheelAnimation"]
position = Vector2( 33, -31 )
rotation = 1.5708
scale = Vector2( 0.15, 0.14 )
z_index = -1
frames = SubResource( 4 )
animation = "New Anim"
frame = 1
playing = true
flip_h = true

[node name="BL" type="AnimatedSprite" parent="WheelAnimation"]
position = Vector2( -25, -31 )
rotation = 1.5708
scale = Vector2( 0.15, 0.14 )
z_index = -1
frames = SubResource( 4 )
animation = "New Anim"
frame = 1
playing = true
flip_h = true

[node name="FR" type="AnimatedSprite" parent="WheelAnimation"]
position = Vector2( 35, 31 )
rotation = 1.5708
scale = Vector2( 0.15, 0.14 )
z_index = -1
frames = SubResource( 4 )
animation = "New Anim"
frame = 1
playing = true

[node name="Particles" type="Node2D" parent="."]

[node name="smokeLeft" type="Particles2D" parent="Particles"]
visible = false
position = Vector2( -44.5001, -25.8809 )
rotation = 3.14159
z_index = -1
amount = 4
lifetime = 0.2
preprocess = 0.1
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="smokeTrooba" type="Particles2D" parent="Particles"]
position = Vector2( -59.0757, 7.19441 )
rotation = 3.14159
z_index = -1
amount = 3
lifetime = 0.6
preprocess = 0.1
local_coords = false
process_material = ExtResource( 6 )
texture = ExtResource( 3 )

[node name="smokeRight" type="Particles2D" parent="Particles"]
visible = false
position = Vector2( -42.6915, 27.6802 )
rotation = 3.14159
z_index = -1
amount = 4
lifetime = 0.2
preprocess = 0.1
local_coords = false
process_material = ExtResource( 4 )
texture = ExtResource( 3 )

[node name="CollisionPlayer" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -43.0652, -42.5335, 51.9699, -42.5335, 54.2148, -36.1729, 60.0142, -33.3667, 61.5108, -28.5027, 60.7625, -21.955, 56.4597, -18.5877, 52.157, -18.7747, 51.2216, -14.2849, 48.4154, -11.4787, 45.7963, -11.2917, 45.7963, -5.86642, 45.7963, 10.5964, 50.2862, 11.7188, 52.157, 15.0862, 51.9699, 18.6407, 59.0788, 19.2019, 61.3237, 23.5047, 61.1367, 30.9878, 58.3305, 34.1681, 56.0856, 35.6647, 54.776, 41.0899, 50.8474, 42.5865, -44.5618, 42.0253, -46.9938, 36.7871, -46.2455, 34.7293, -49.4258, 26.8721, -47.7421, 20.1373, -41.1945, 17.8924, -41.1945, 11.7188, -53.3545, 11.3447, -53.3545, 9.09974, -61.3988, 8.72559, -61.3988, 4.23574, -53.1674, 4.23574, -53.3545, 0.868352, -41.1945, 1.05543, -40.6332, -18.0264, -47.9292, -20.0843, -49.0517, -25.1353, -49.4258, -30.1864, -46.8068, -34.8633, -46.6197, -38.6049 )

[node name="ShootAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 10 )
volume_db = -13.0
